erDiagram
    TENANTS ||--o{ ORGANIZATION_UNITS : has
    TENANTS ||--o{ USERS : has
    TENANTS ||--o{ ENABLED_FEATURES : has
    TENANTS ||--o{ SEQUENCES : has
    TENANTS ||--o{ CHART_OF_ACCOUNTS : has
    TENANTS ||--o{ DOCUMENTS : has
    TENANTS ||--o{ PARTIES : has
    TENANTS ||--o{ PRODUCTS : has
    TENANTS ||--o{ WAREHOUSES : has
    
    ORGANIZATION_UNITS ||--o{ DOCUMENTS : scopes
    ORGANIZATION_UNITS ||--o{ STOCK_ITEMS : "scopes (via warehouse)"
    ORGANIZATION_UNITS ||--o{ WAREHOUSES : assigned

    PARTIES ||--o{ DOCUMENTS : involved
    PARTIES ||--o{ PAYMENTS : pays

    DOCUMENTS ||--o{ DOCUMENT_ITEMS : has
    DOCUMENT_TYPES ||--o{ DOCUMENTS : categorises
    DOCUMENTS ||--o{ DOCUMENT_LINKS : source/target

    PRODUCTS ||--o{ DOCUMENT_ITEMS : referenced
    PRODUCTS ||--o{ STOCK_ITEMS : summarised
    WAREHOUSES ||--o{ STOCK_ITEMS : contains
    STOCK_MOVEMENTS ||--o{ PRODUCTS : tracks
    STOCK_MOVEMENTS ||--o{ WAREHOUSES : at

    JOURNAL_ENTRIES ||--o{ JOURNAL_ENTRY_LINES : has
    CHART_OF_ACCOUNTS ||--o{ JOURNAL_ENTRY_LINES : used

    PAYMENTS ||--o{ PAYMENT_ALLOCATIONS : allocates
    DOCUMENTS ||--o{ PAYMENT_ALLOCATIONS : receives

    ATTACHMENTS o..o{ TENANTS : belongs
    COMMENTS o..o{ TENANTS : belongs
    ENTITY_ATTRIBUTES o..o{ TENANTS : belongs